# rusql

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  README.md  gen-changelog.sh  prep-release.sh
rusql-bench/: Cargo.toml  README.md
rusql-bench/benches/: pg_pool.rs  sqlite_fetch_all.rs
rusql-core/: Cargo.toml
rusql-core/src/: acquire.rs  column.rs  connection.rs  database.rs  decode.rs  describe.rs  error.rs  executor.rs  from_row.rs  lib.rs  logger.rs  query.rs  query_builder.rs  row.rs  transaction.rs
rusql-core/src/any/: arguments.rs  column.rs  database.rs  decode.rs  encode.rs  kind.rs  migrate.rs  mod.rs  options.rs  row.rs  transaction.rs  type.rs  type_info.rs  types.rs  value.rs
rusql-core/src/any/connection/: establish.rs  executor.rs  mod.rs
rusql-core/src/io/: buf_stream.rs  write_and_flush.rs
rusql-core/src/migrate/: error.rs  migrator.rs  source.rs
rusql-core/src/mssql/: transaction.rs
rusql-core/src/mssql/connection/: establish.rs  mod.rs  stream.rs
rusql-core/src/mysql/: migrate.rs  mod.rs
rusql-core/src/mysql/options/: connect.rs  mod.rs
rusql-core/src/mysql/protocol/response/: eof.rs
rusql-core/src/mysql/testing/: mod.rs
rusql-core/src/mysql/types/: chrono.rs
rusql-core/src/net/: mod.rs  socket.rs
rusql-core/src/net/tls/: mod.rs  rustls.rs
rusql-core/src/pool/: connection.rs  inner.rs  mod.rs  options.rs
rusql-core/src/postgres/: advisory_lock.rs  copy.rs  listener.rs  migrate.rs  type_info.rs
rusql-core/src/postgres/connection/: describe.rs  mod.rs  stream.rs
rusql-core/src/postgres/io/: buf_mut.rs
rusql-core/src/postgres/message/: describe.rs  execute.rs  parse.rs  response.rs
rusql-core/src/postgres/options/: mod.rs  parse.rs
rusql-core/src/postgres/testing/: mod.rs
rusql-core/src/postgres/types/: bigdecimal.rs  decimal.rs  lquery.rs  ltree.rs  mod.rs
rusql-core/src/sqlite/: migrate.rs  mod.rs
rusql-core/src/sqlite/connection/: describe.rs  mod.rs
rusql-core/src/sqlite/options/: mod.rs  parse.rs
rusql-core/src/sqlite/testing/: mod.rs
rusql-core/src/testing/: mod.rs
rusql-core/src/types/: json.rs  mod.rs
rusql-macros/: Cargo.toml
rusql-macros/src/: lib.rs  migrate.rs  test_attr.rs
rusql-macros/src/database/: mod.rs  mssql.rs  mysql.rs  postgres.rs  sqlite.rs
rusql-macros/src/derives/: attributes.rs  decode.rs  encode.rs  row.rs  type.rs
rusql-macros/src/query/: args.rs  data.rs  mod.rs  output.rs
rusql-rt/: Cargo.toml
rusql-rt/src/: lib.rs
src/: lib.rs
src/macros/: mod.rs  test.md
